--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -41,7 +41,7 @@
                             </ul>
                         </li>
                         <li>Ahora el daño en combate se redondea de manera clásica. Si se le hace mas de la mitad del daño a una unidad, muere. Es decir, ahora hay heridas.</li>
-                        <li>El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas.</li>
+                        <li style="color: red;">El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas. Sin embargo, las tropas se emparejarán por su <span class="label label-extra">Poder</span> total, de mayor a menor, en lugar de por velocidad.</li>
                         <li>A raíz de lo anterior, se han eliminado los Hechizos de <span class="label label-extra">Velocidad</span> y se han sustituido por otros nuevos:
                             <ul>
                                 <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de Turnos para investigar.
@@ -85,6 +85,8 @@
                                 <li><span class="label label-warning">Jinete sin Cabeza</span>, intercambiado con <span class="label label-warning">Nigromante</span>, resucita <span class="label label-warning">Esqueletos</span> tras una batalla.</li>
                             </ul>
                         </li>
+                        <li>Ahora <span class="label label-success">Ladrona Elfa</span> elimina 1 turno por nivel, en lugar de porcentual.</li>
+                        <li>Ahora <span class="label label-success">Control del Clima</span> ya no tiene reducción de recursos.</li>
                         <li>Se ha eliminado la posibilidad de reclutar tropas neutrales, y se han eliminado las tropas neutrales del juego:
                             <ul>
                                 <li><span class="label label-extra">Arqueros</span></li>
@@ -96,13 +98,12 @@
                         </li>
                         <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de Tropas invocadas por hechizos.</li>
                         <li>Se han ajustado muchos precios de salida de la subasta dependiendo de la rareza.</li>
-                        <li>Ahora <span class="label label-success">Control del Clima</span> ya no tiene reducción de recursos.</li>
                         <li>Se han ajustado muchos valores de poder de <span class="label label-extra">Edificios</span> para que sea más complicado saber si un mago tiene o no ejército en su Reino.</li>
                         <li>Se han ajustado muchos valores de ataques, defensas y mantenimientos de <span class="label label-extra">Tropas</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Héroes</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Encantamientos</span>.</li>
                         <li>Ahora solo se subastará una unidad de <span class="label label-extra">Artefacto</span> cada vez.</li>
-                        <li>Ahora los <span class="label label-extra">Artefacto</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
+                        <li>Ahora los <span class="label label-extra">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
                         <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
                         <li>Se ha duplicado el mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
                         <li>Se ha introducido en el juego el Mercado de <span class="label label-rune">Runas</span>, una versión beta de la futura tienda.</li>
