--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-ils"></i>Mercado de Runas</h1>
+                <h1><i class="fa fa-fw fa-ils"></i>Mercado</h1>
                 {% include "ArchmageGameBundle::resources.html.twig" with {'player': player} %}
             </div>
             <div class="col-xs-12 col-md-6 col-md-offset-3">
@@ -19,27 +19,27 @@
                                 <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/rune.jpg') }}">
                             </div>
                             <div class="col-xs-8 text-padded">
-                                <div class="col-xs-12">Aquí puedes gastar tus <span class="label label-rune">Runas</span> en comprar los artículos que prefieras de la tienda.</div>
+                                <div class="col-xs-12">Aquí puedes gastar tus escasas <span class="label label-rune">Runas</span> en comprar los artículos que prefieras de la tienda.</div>
                             </div>
                         </div>
                     </div>
                     <div class="panel-footer text-center">
-                        <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_market' ) }}"><i class="fa fa-fw fa-ils"></i>Comprar</a>
+                        <a class="btn btn-default" href="{{ path( 'archmage_game_kingdom_market' ) }}"><i class="fa fa-fw fa-euro"></i>Comprar</a>
                     </div>
                 </div>
             </div>
             {% for rune in runes %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-rune">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i><a href="{{ path('archmage_game_home_help') }}#{{ rune.name|slug }}" class="link">{{ rune.name }}</a> ({{ rune.cost|nf }})</div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i><a href="{{ path('archmage_game_home_help') }}#{{ rune.name|slug }}" class="link">{{ rune.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Coste en Runas / Runas en tu poder">[{{ rune.cost|nf }}/{{ player.runes|nf }}]</span></div>
                     <div class="panel-body text-responsive">
                         <div class="row">
                             <div class="col-xs-4">
-                                <img class="custom-thumbnail" src="{{ asset('bundles/archmagegame/images/kingdom/rune.jpg') }}">
+                                <img class="custom-thumbnail" src="{{ asset( rune.image ) }}">
                             </div>
                             <div class="col-xs-8 text-padded">
                                 <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ rune.skill.description|raw }}</div>
-                                <div class="col-xs-12 text-lore"><small><i>Muy antigüas y podersosas, otorgan ventaja sobre el resto de jugadores.</i></small></div>
+                                <div class="col-xs-12 text-lore"><small><i>{{ rune.lore }}.</i></small></div>
                             </div>
                         </div>
                     </div>
@@ -48,7 +48,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="btn-group" role="group" aria-label="...">
-                                        <button type="submit" class="btn btn-default" {% if rune.cost > player.runes %}disabled{% endif %}><i class="fa fa-fw fa-ils"></i>Intercambiar</button>
+                                        <button type="submit" class="btn btn-default" {% if rune.cost > player.runes %}disabled{% endif %}><i class="fa fa-fw fa-ils"></i>Gastar</button>
                                     </div>
                                     <input type="hidden" id="rune" name="rune" value="{{ rune.id }}" required />
                                 </div>
