Ahora al vencer un mapa los heroes tambien ganan experiencia. Mejoradas fixtures de heroes. Mejorado patch.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -32,7 +32,7 @@
                                 <li><span class="label label-legendary">Anillo Invocador</span>, +10% producción de Tropas en tu Reino.</li>
                             </ul>
                         </li>
-                        <li>Se ha añadido el sistema de Alquimia al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan Artefactos legendarios. De lo contrario, son reutilizables.</li>
+                        <li>Se ha añadido el sistema de Alquimia al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
                         <li>Se ha añadido el sistema de Aventuras al juego. Un jugador puede tratar de usar <span class="label label-map">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso:
                             <ul>
                                 <li>Fáciles, de color verde. Normalmente pocas tropas y hasta un Artefacto <span class="label label-extra">Común</span>.</li>
@@ -44,11 +44,11 @@
                         <li style="color: red;">El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas. Sin embargo, las tropas se emparejarán por su <span class="label label-extra">Poder</span> total, de mayor a menor, en lugar de por velocidad.</li>
                         <li>A raíz de lo anterior, se han eliminado los Hechizos de <span class="label label-extra">Velocidad</span> y se han sustituido por otros nuevos:
                             <ul>
-                                <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de Turnos para investigar.
+                                <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de <span class="label label-extra">Turnos</span> para investigar.
                                 <li><span class="label label-danger">Quemar Alas</span> por <span class="label label-danger">Saquear</span>, encuentra <span class="label label-map">Mapas</span>.</li>
-                                <li><span class="label label-warning">Miedo</span> por <span class="label label-warning">Terror</span>, reduce <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> a un Reino enemigo.</li>
-                                <li><span class="label label-primary">Volar</span> por <span class="label label-success">Druidismo</span>, encuentra <span class="label label-recipe">Recetas</span>.</li>
-                                <li><span class="label label-success">Prisa</span> por <span class="label label-primary">Oasis</span>, aumenta la cantidad de Tropas invocadas en tu Reino.</li>
+                                <li><span class="label label-warning">Miedo</span> por <span class="label label-warning">Terror</span>, reduce <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> al Reino enemigo.</li>
+                                <li><span class="label label-success">Prisa</span> por <span class="label label-success">Druidismo</span>, encuentra <span class="label label-recipe">Recetas</span>.</li>
+                                <li><span class="label label-primary">Volar</span> por <span class="label label-primary">Oasis</span>, aumenta la cantidad de <span class="label label-extra">Tropas</span> invocadas en tu Reino.</li>
                             </ul>
                         </li>
                         <li>También a raíz de lo anterior, se han reducido los bonus de <span class="label label-extra">Velocidad</span> de los siguientes Artefactos:
