Eliminada runa de turnos y agregada runa de Telegram.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -23,13 +23,13 @@
                                 <li><span class="label label-legendary">Legendario</span>, como los <span class="label label-legendary">Anillos</span>.</li>
                             </ul>
                         </li>
-                        <li>A raíz de lo anterior, se han añadido los siguientes <span class="label label-legendary">Artefactos</span> Legendarios, que otorgan una pasiva única con solo poseerlos:
+                        <li>A raíz de lo anterior, se han añadido los siguientes <span class="label label-legendary">Artefactos</span> legendarios, que otorgan una pasiva única con solo poseerlos:
                             <ul>
-                                <li><span class="label label-legendary">Anillo Avaricioso</span>, +10% producción de Oro en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Poderoso</span>, +10% producción de Maná en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Duro</span>, +10% de Defensa Física y Mágica en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Encantador</span>, +10% producción de Personas en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Invocador</span>, +10% producción de Tropas en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Avaricioso</span>, +10% producción de <span class="label label-extra">Oro</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Encantador</span>, +10% producción de <span class="label label-extra">Personas</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Poderoso</span>, +10% producción de <span class="label label-extra">Maná</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Duro</span>, +10% de <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Invocador</span>, +10% producción de <span class="label label-extra">Tropas</span> en tu Reino.</li>
                             </ul>
                         </li>
                         <li>Se ha añadido el sistema de Alquimia al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
@@ -96,7 +96,7 @@
                                 <li><span class="label label-extra">Milicias</span></li>
                             </ul>
                         </li>
-                        <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de Tropas invocadas por hechizos.</li>
+                        <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de <span class="label label-extra">Tropas</span> invocadas.</li>
                         <li>Se han ajustado muchos precios de salida de la subasta dependiendo de la rareza.</li>
                         <li>Se han ajustado muchos valores de poder de <span class="label label-extra">Edificios</span> para que sea más complicado saber si un mago tiene o no ejército en su Reino.</li>
                         <li>Se han ajustado muchos valores de ataques, defensas y mantenimientos de <span class="label label-extra">Tropas</span>.</li>
@@ -106,7 +106,7 @@
                         <li>Ahora los <span class="label label-extra">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
                         <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
                         <li>Se ha duplicado el mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
-                        <li>Se ha introducido en el juego el Mercado de <span class="label label-rune">Runas</span>, una versión beta de la futura tienda.</li>
+                        <li>Se ha introducido en el juego el Mercado de <span class="label label-rune">Runas</span>, una versión beta de la futura tienda con dinero del juego.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
