--- a/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/market.html.twig
@@ -31,7 +31,7 @@
             {% for rune in runes %}
             <div class="col-xs-12 col-md-6">
                 <div class="panel panel-rune">
-                    <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i><a href="{{ path('archmage_game_home_help') }}#{{ rune.name|slug }}" class="link">{{ rune.name }}</a> <span data-toggle="tooltip" data-placement="top" title="Coste en Runas / Runas en tu poder">[{{ rune.cost|nf }}/{{ player.runes|nf }}]</span></div>
+                    <div class="panel-heading text-center"><i class="fa fa-fw fa-ils"></i><a href="{{ path('archmage_game_home_help') }}#{{ rune.name|slug }}" class="link">{{ rune.name }}</a></div>
                     <div class="panel-body text-responsive">
                         <div class="row">
                             <div class="col-xs-4">
@@ -48,7 +48,7 @@
                             <div class="form-group">
                                 <div class="input-group">
                                     <div class="btn-group" role="group" aria-label="...">
-                                        <button type="submit" class="btn btn-default" {% if rune.cost > player.runes %}disabled{% endif %}><i class="fa fa-fw fa-ils"></i>Gastar</button>
+                                        <button type="submit" class="btn btn-default" {% if rune.cost > player.runes %}disabled{% endif %}><i class="fa fa-fw fa-ils"></i>Gastar {{ rune.cost }} Runas</button>
                                     </div>
                                     <input type="hidden" id="rune" name="rune" value="{{ rune.id }}" required />
                                 </div>
