Ajustados muchos valores de Hechizos, reflejados en skillfixtures. Tambien se han ordenado junto con spellfixtures usando el excel de google calc. Renombrada CalaveraMaldita por DemonioEmbotellado. Reducidos muchos tamanios de imagenes. Mejorado patch.

--- a/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Home/patch.html.twig
@@ -16,32 +16,7 @@
                 <div class="panel-body text-responsive">
                     <ul>
                         <li>Comienza la Temporada 3.</li>
-                        <li>Ahora los Artefactos, Hechizos y Unidades tienen niveles de rareza. Estos afectan a la frecuencia de apararición en el juego de cualquiera de las maneras habituales:
-                            <ul>
-                                <li><span class="label label-extra">Común</span>, como las diferentes <span class="label label-extra">Pociones</span>.</li>
-                                <li><span class="label label-extra">Raro</span>, como las <span class="label label-extra">Brújulas Mágicas</span> o los <span class="label label-extra">Huevos de Dragón</span>.</li>
-                                <li><span class="label label-legendary">Legendario</span>, como los <span class="label label-legendary">Anillos</span>.</li>
-                            </ul>
-                        </li>
-                        <li>A raíz de lo anterior, se han añadido los siguientes <span class="label label-legendary">Artefactos</span> legendarios, que otorgan una pasiva única con solo poseerlos:
-                            <ul>
-                                <li><span class="label label-legendary">Anillo Avaricioso</span>, +10% producción de <span class="label label-extra">Oro</span> en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Encantador</span>, +10% producción de <span class="label label-extra">Personas</span> en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Poderoso</span>, +10% producción de <span class="label label-extra">Maná</span> en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Duro</span>, +10% de <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> en tu Reino.</li>
-                                <li><span class="label label-legendary">Anillo Invocador</span>, +10% producción de <span class="label label-extra">Tropas</span> en tu Reino.</li>
-                            </ul>
-                        </li>
-                        <li>Se ha añadido el sistema de Alquimia al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
-                        <li>Se ha añadido el sistema de Aventuras al juego. Un jugador puede tratar de usar <span class="label label-map">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso:
-                            <ul>
-                                <li>Fáciles, de color verde. Normalmente pocas tropas y hasta un Artefacto <span class="label label-extra">Común</span>.</li>
-                                <li>Medios, de color amarillo. Normalmente moderadas tropas y hasta un Artefacto <span class="label label-extra">Raro</span>.</li>
-                                <li>Difíciles, de color rojo. Normalmente muchas tropas y hasta un <span class="label label-legendary">Artefacto</span> legendario.</li>
-                            </ul>
-                        </li>
-                        <li>Ahora el daño en combate se redondea de manera clásica. Si se le hace mas de la mitad del daño a una unidad, muere. Es decir, ahora hay heridas.</li>
-                        <li style="color: red;">El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas. Sin embargo, las tropas se emparejarán por su <span class="label label-extra">Poder</span> total, de mayor a menor, en lugar de por velocidad.</li>
+                        <li style="color: red;">El combate ha vuelto a su versión original. Ahora la <span class="label label-extra">Velocidad</span> vuelve a ser un factor importante, y las unidades más rapidas dañarán primero a las más lentas. Sin embargo, las tropas se emparejarán por su <span class="label label-extra">Poder</span> total, de mayor a menor, en lugar de por velocidad, como se venía haciendo hasta ahora.</li>
                         <li>A raíz de lo anterior, se han eliminado los Hechizos de <span class="label label-extra">Velocidad</span> y se han sustituido por otros nuevos:
                             <ul>
                                 <li><span class="label label-info">Lentitud</span> por <span class="label label-info">Sabiduría</span>, reduce el número de <span class="label label-extra">Turnos</span> para investigar.
@@ -57,6 +32,32 @@
                                 <li><span class="label label-extra">Botas de Velocidad</span>, de +3 a +1 velocidad.</li>
                             </ul>
                         </li>
+                        <li>Ahora el daño en combate se redondea de manera clásica. Si se le hace mas de la mitad del daño a una unidad, muere. Es decir, ahora hay heridas.</li>
+                        <li>Ahora los Artefactos, Hechizos y Unidades tienen niveles de rareza. Estos afectan a la frecuencia de apararición en el juego de cualquiera de las maneras habituales:
+                            <ul>
+                                <li><span class="label label-extra">Común</span>, como las diferentes <span class="label label-extra">Pociones</span>.</li>
+                                <li><span class="label label-extra">Raro</span>, como las <span class="label label-extra">Brújulas Mágicas</span> o los <span class="label label-extra">Huevos de Dragón</span>.</li>
+                                <li><span class="label label-legendary">Legendario</span>, como los <span class="label label-legendary">Anillos</span>.</li>
+                            </ul>
+                        </li>
+                        <li>A raíz de lo anterior, se han añadido los siguientes <span class="label label-legendary">Artefactos</span> legendarios, que otorgan una habilidad pasiva permanente simplemente con poseerlos:
+                            <ul>
+                                <li><span class="label label-legendary">Anillo Avaricioso</span>, +10% producción de <span class="label label-extra">Oro</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Encantador</span>, +10% producción de <span class="label label-extra">Personas</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Poderoso</span>, +10% producción de <span class="label label-extra">Maná</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Duro</span>, +10% de <span class="label label-extra">Defensa Física</span> y <span class="label label-extra">Defensa Mágica</span> en tu Reino.</li>
+                                <li><span class="label label-legendary">Anillo Invocador</span>, +10% producción de <span class="label label-extra">Tropas</span> en tu Reino.</li>
+                            </ul>
+                        </li>
+                        <li>Se ha añadido el sistema de <span class="label label-recipe">Alquimia</span> al juego. Un jugador puede usar <span class="label label-recipe">Recetas</span> para convertir unos Artefactos en otros. Pueden conseguirse en la Subasta, y sólo se gastan si otorgan <span class="label label-legendary">Artefactos</span> legendarios. De lo contrario, son reutilizables.</li>
+                        <li>Se ha añadido el sistema de <span class="label label-map">Aventuras</span> al juego. Un jugador puede tratar de usar <span class="label label-map">Mapas</span> para derrotar ejércitos que merodean por el Reino y obtener interesantes recompensas. Pueden conseguirse en la Subasta, y son de un sólo uso, ganes o pierdas:
+                            <ul>
+                                <li>Fáciles, de color <span style="color:limegreen;">verde</span>. Normalmente pocas tropas y hasta un Artefacto <span class="label label-extra">Común</span>.</li>
+                                <li>Medios, de color <span style="color:yellow;">amarillo</span>. Normalmente moderadas tropas y hasta un Artefacto <span class="label label-extra">Raro</span>.</li>
+                                <li>Difíciles, de color <span style="color:red;">rojo</span>. Normalmente muchas tropas y hasta un <span class="label label-legendary">Artefacto</span> legendario.</li>
+                            </ul>
+                        </li>
+                        <li>Se ha introducido en el juego las <span class="label label-rune">Runas</span>, una moneda de cambio empleada en el nuevo <span class="label label-rune">Mercado</span>, una versión de la futura tienda con dinero interno del juego. Se pueden obtener completando mapas y en ocasiones especiales.</li>
                         <li>Se han eliminado los siguientes Artefactos:
                             <ul>
                                 <li><span class="label label-extra">Botas de Velocidad</span>, ha sido sustituido por <span class="label label-extra">Poción de Agilidad</span>.</li>
@@ -74,6 +75,7 @@
                                 <li><span class="label label-extra">Muñeca Voodoo</span>, hasta -25 <span class="label label-extra">Turnos</span> al Reino enemigo.</li>
                                 <li><span class="label label-extra">Reloj de Arena</span>, hasta -100 <span class="label label-extra">Turnos</span> a los Encantamientos de tu Reino.</li>
                                 <li><span class="label label-extra">Cuerno de Guerra</span>, invoca <span class="label label-extra">Humanos</span>.</li>
+                                <li><span class="label label-extra">Demonio Embotellado</span>, renombrado de <span class="label label-extra">Calavera Maldita</span>.</li>
                             </ul>
                         </li>
                         <li>Se han añadido los siguientes Héroes:
@@ -82,10 +84,10 @@
                                 <li><span class="label label-success">Dríada</span>, aumenta la <span class="label label-extra">Defensa Mágica</span> de tu Reino.</li>
                                 <li><span class="label label-danger">Súcubo</span>, aumenta el número de <span class="label label-extra">Tropas</span> invocadas.</li>
                                 <li><span class="label label-primary">Campeón</span>, aumenta la <span class="label label-extra">Defensa Física</span> de tu Reino.</li>
-                                <li><span class="label label-warning">Jinete sin Cabeza</span>, intercambiado con <span class="label label-warning">Nigromante</span>, resucita <span class="label label-warning">Esqueletos</span> tras una batalla.</li>
+                                <li><span class="label label-warning">Jinete sin Cabeza</span>, intercambiado con <span class="label label-warning">Nigromante</span>, resucita <span class="label label-warning">Esqueletos</span> tras una batalla que no sea un <span class="label label-map">Mapa</span>.</li>
                             </ul>
                         </li>
-                        <li>Ahora <span class="label label-success">Ladrona Elfa</span> elimina 1 turno por nivel, en lugar de porcentual.</li>
+                        <li>Ahora <span class="label label-success">Ladrona Elfa</span> elimina 1 turno por nivel, en lugar de ser porcentual.</li>
                         <li>Ahora <span class="label label-success">Control del Clima</span> ya no tiene reducción de recursos.</li>
                         <li>Se ha eliminado la posibilidad de reclutar tropas neutrales, y se han eliminado las tropas neutrales del juego:
                             <ul>
@@ -97,16 +99,16 @@
                             </ul>
                         </li>
                         <li>Ahora los <span class="label label-extra">Barracones</span> ya no permiten reclutar más deprisa, sino que aumentan la cantidad de <span class="label label-extra">Tropas</span> invocadas.</li>
-                        <li>Se han ajustado muchos precios de salida de la subasta dependiendo de la rareza.</li>
+                        <li>Ahora solo se subastará una unidad de <span class="label label-extra">Artefacto</span> cada vez.</li>
+                        <li>Ahora los <span class="label label-extra">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
+                        <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
+                        <li>Se ha duplicado el coste de mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
+                        <li>Se han ajustado muchos valores de salida de precios en la subasta, dependiendo de la rareza.</li>
                         <li>Se han ajustado muchos valores de poder de <span class="label label-extra">Edificios</span> para que sea más complicado saber si un mago tiene o no ejército en su Reino.</li>
                         <li>Se han ajustado muchos valores de ataques, defensas y mantenimientos de <span class="label label-extra">Tropas</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Héroes</span>.</li>
                         <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Encantamientos</span>.</li>
-                        <li>Ahora solo se subastará una unidad de <span class="label label-extra">Artefacto</span> cada vez.</li>
-                        <li>Ahora los <span class="label label-extra">Artefactos</span> otorgan poder, y los <span class="label label-legendary">Artefactos</span> legendarios mucho más poder que los demás.</li>
-                        <li>Se ha reducido el cap de poder superior al atacar del 80% al 60%.</li>
-                        <li>Se ha duplicado el mantenimiento de las <span class="label label-extra">Barreras</span> y <span class="label label-extra">Fortalezas</span>.</li>
-                        <li>Se ha introducido en el juego el Mercado de <span class="label label-rune">Runas</span>, una versión beta de la futura tienda con dinero del juego.</li>
+                        <li>Se han ajustado muchos valores de bonus de <span class="label label-extra">Hechizos</span>.</li>
                     </ul>
                 </div>
                 <div class="panel-footer text-center">Beta cerrada</div>
