--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                     <div class="panel-footer text-center text-responsive">
-                        <button type="button" class="btn btn-default" disabled><i class="fa fa-fw fa-flag"></i>A la batalla</button>
+                        <span class="btn btn-default"><i class="fa fa-fw fa-flag"></i>A la batalla</span>
                     </div>
                 </div>
             </div>
